--- a/emlmentofhtml.html
+++ b/emlmentofhtml.html
@@ -37,6 +37,19 @@
     </p>
     <p><a href="http://www.w3school.com.cn/html/html_links.asp#tips">有用的提示</a></p>
 
+
+    <ol>
+        <li>coffe</li>
+        <li>orange</li>
+        <li>good</li>
+
+
+
+    </ol>
+    <ul>
+        <li>youzi</li>
+        <li>root</li>
+    </ul>
 </body>
 
 </html>
