--- a/form.html
+++ b/form.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>表单</title>
 </head>
+<style type="text/css">
+    body{background-color: chartreuse;}
+</style>
 <form action="用户">
     用户名：<input type='text' value='张三'><br>
-    邮件：<input type="email" placeholder="zhangsan@qq.com" required><br><br>
+    邮件：<input type="email" placeholder="zhangsan@qq.com"  required><br><br>
     密码：<input type="password" size=50><br><br>
     性别：<input type="radio" name=sex id='#' checked="checked">男
     <input type="radio" name=sex id='#'>女
