22-1 luyanpeng finish aside

--- a/tour.html
+++ b/tour.html
@@ -5,90 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>国内旅游</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
-<style>
-    html {
-        background-color: burlywood;
-    }
 
-    body {
-        background-color: chartreuse;
-        max-width: 640px;
-        margin:  0 auto;
-        width: 100%
-        height: 100%;;
-    }
-
-    h1 {
-        text-align: center;
-        font-size: 35px;
-        color: cornsilk;
-        margin-top: 50;
-    }
-
-    .quik {
-        background-color: chartreuse;
-        height: 60px;
-    }
-
-    .mote {
-        background-color: burlywood;
-    }
-
-    .touxiang {
-        border-radius: 6cm;
-
-    }
-
-    .title1 {
-        position: absolute;
-        font-size: 18px;
-        font-weight: bolder;
-        color: white;
-        white-space: nowrap;
-        line-height: 40px;
-        top: 0px;
-        left: 35px ;
-        margin-left: 35px;
-        /* border: 1px solid black; */
-
-
-    }
-
-    .bottom {
-        position: absolute;
-        top: 408px;
-        left: 333px;
-        width: 100%;
-    }
-
-    .face {
-        top: 60px;
-        float: left;
-        border: 1px solid white;
-        border-radius: 6cm;
-        width: 30px;
-        height: 30px;
-
-    }
-
-    .day {
-        position: absolute;
-        top: 80px;
-        right: 360px;
-        white-space: nowrap;
-
-        border-radius: 60%;
-        color: navy;
-        background-color: rgb(32, 162, 218);
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        line-height: 35px;
-        /* border: 1px solid black; */
-
-    }
-</style>
 
 
 <body>
@@ -96,7 +15,7 @@
         <h1>国内旅游计划</h1>
     </header>
     <section class="mote">
-        <a href="#"><img src="./fengjing.jpg" alt="" width="640px">
+        <a href="#"> <img src="./fengjing.jpg" alt="" width="640px">
         </a>
         <div class="bottom">
             <p class="face">
@@ -107,11 +26,54 @@
             <h3 class="title1">我的旅游计划</h3>
 
         </div>
+
+        <p class="day">14天</p>
         <div>
-            <h4 class="day">15天</h4>
+            <em>城市
+            </em>
+            <span>
+                昆明 - 香格里拉 - 西藏
+
+            </span>
+
         </div>
     </section>
+    <section class="mote">
+        <a href="#"> <img src="华东.jpg" alt="" width="640px">
+        </a>
+        <div class="bottom">
+            <p class="face">
 
+                <img src="touxiang.jpg" alt="" width="38px" height="30px" class=touxiang>
+
+            </p>
+            <h3 class="title1">我的旅游计划</h3>
+
+        </div>
+
+        <p class="day">15天</p>
+        <div>
+            <em>城市
+            </em>
+            <span>
+                北京 - 常州 - 苏州
+
+            </span>
+
+        </div>
+    </section>
+    <aside class="qui-aside">
+        <nav class="nav-aside">
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">目的地</a></li>
+                <li><a href="#">酒店</a></li>
+                <li><a href="#">机票</a></li>
+                <li><a href="#">时间</a></li>
+                <li><a href="#">点评</a></li>
+            </ul>
+        </nav>
+    </aside>
 
 </body>
 
