--- a/tour.html
+++ b/tour.html
@@ -62,6 +62,18 @@
 
         </div>
     </section>
+    <footer class="qui-footer">
+
+        <span>
+            <a href="">手机版</a>
+        </span>
+        <span>
+            <a href="">电脑版</a>
+        </span>
+        <span>
+            <a href="">APP</a>
+        </span>
+    </footer>
     <aside class="qui-aside">
         <nav class="nav-aside">
             <ul>
