--- a/bootstrap/grid system.html
+++ b/bootstrap/grid system.html
@@ -10,19 +10,138 @@
 
     <title>grid system</title>
   </head>
+  <style>
+    .col{
+      border: 1px solid red;
+    }
+    .col-4{
+      border: 1px solid red;
+
+    }
+    .col-8{
+      border: 1px solid red;
+      
+    }
+    
+  </style>
   <body>
     <h1>grid system</h1>
     <div class="container">
         <div class="row">
-          <div class="col-sm">
-            One of three columns
+          <div class="col">
+            1
           </div>
-          <div class="col-sm">
-            One of three columns
+          <div class="col">
+            1
           </div>
-          <div class="col-sm">
-            One of three columns
+          <div class="col">
+            1
           </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+          <div class="col">
+            1
+          </div>
+        </div>
+      </div>
+      <br><br><br>
+      <div class="row">
+        <div class="col-4">
+          1
+
+        </div>
+        <div class="col-8">
+          1
+
+        </div>
+      <div class="row">
+        <div class="col-md-4 col-xs-2">
+          1
+
+        </div>
+
+      </div>
+
+      </div>
+      <div class="container">
+        <div class="row justify-content-start">
+          <div class="col-4">
+            One of two columns
+          </div>
+          <div class="col-4">
+            One of two columns
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4">
+            One of two columns
+          </div>
+          <div class="col-4">
+            One of two columns
+          </div>
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-4">
+            One of two columns
+          </div>
+          <div class="col-4">
+            One of two columns
+          </div>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-4">
+            One of two columns
+          </div>
+          <div class="col-4">
+            One of two columns
+          </div>
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-4">
+            One of two columns
+          </div>
+          <div class="col-4">
+            One of two columns
+          </div>
+        </div>
+      </div>
+      <!-- 偏移 -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4 offset-md-4">.col-md-4 .offset-md-4</div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 offset-md-3">.col-md-3 .offset-md-3</div>
+          <div class="col-md-3 offset-md-3">.col-md-3 .offset-md-3</div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 offset-md-3">.col-md-6 .offset-md-3</div>
         </div>
       </div>
 
