作业10 22-陆演鹏 finish invitation

--- a/bootstrap/grid system.html
+++ b/bootstrap/grid system.html
@@ -22,6 +22,14 @@
       border: 1px solid red;
       
     }
+    .col-sm-4{
+      border: 1px solid red;
+
+    }
+    .col-md-4{
+      border: 1px solid red;
+
+    }
     
   </style>
   <body>
@@ -143,6 +151,45 @@
         <div class="row">
           <div class="col-md-6 offset-md-3">.col-md-6 .offset-md-3</div>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          1
+
+        </div>
+        <div class="col-sm-4">
+          1
+
+        </div>
+        <div class="col-sm-4">
+          1
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          1
+
+        </div>
+        <div class="col-md-4">
+          1
+
+        </div>
+        <div class="col-md-4">
+          1
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 col-xs-2">
+          1
+
+        </div>
+
+      </div>
+
       </div>
 
     <!-- Optional JavaScript -->
