--- a/bootstrap/invitation.html
+++ b/bootstrap/invitation.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" 
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>邀请</title>
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container" style="background-color: #ebdc80;">
-        <div class="row justify-content-md-center" style="padding-top;:10px">
+        <div class="row justify-content-md-center" style="padding-top:10px">
             <h1>
                 邀请名单
 
